# vibestats

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  action.yml  install.sh
.github/workflows/: aggregate.yml  ci.yml  deploy-site.yml  release.yml
_bmad-output/implementation-artifacts/: 1-1-initialize-monorepo-directory-structure.md  1-2-initialize-rust-binary-project.md  1-3-initialize-astro-site-project.md  1-4-define-and-document-all-json-and-toml-schemas.md  2-1-implement-config-module.md  2-2-implement-logger-module.md  2-3-implement-checkpoint-module.md  2-4-implement-jsonl-parser.md  2-5-implement-github-api-module.md  3-1-implement-core-sync-orchestration.md  3-2-implement-stop-hook-integration.md  3-3-implement-sessionstart-hook-integration.md  3-4-implement-vibestats-sync-and-vibestats-sync-backfill-commands.md  4-1-implement-vibestats-status-command.md  4-2-implement-vibestats-machines-list-and-machines-remove.md  4-3-implement-vibestats-auth-command.md  4-4-implement-vibestats-uninstall-command.md  5-1-implement-aggregate-py.md  5-2-implement-generate-svg-py.md  5-3-implement-update-readme-py.md  5-4-implement-action-yml.md  7-4-build-landing-page.md  (+32 more)
action/: aggregate.py  fetch_github_contributions.py  generate_svg.py  update_readme.py
docs/: schemas.md
scripts/: capture-readme-screenshots.mjs
site/: .prettierrc  astro.config.mjs  package-lock.json  package.json  tsconfig.json
src/: checkpoint.rs  codex_parser.rs  config.rs  github_api.rs  github_contributions.rs  hooks.rs  jsonl_parser.rs  logger.rs  main.rs  sync.rs
(+123 files in other folders)
